--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-A heavily commented Sudoku Solver wrote in Java.
+A Sudoku Solver wrote in Java.
 
 Usage:
 The sudoku is read from a text file called "Sudoku.txt".
 Where the number is not given a 0 is put in the text file.
 Compile with
-javac SudokuSolver.java
+"javac SudokuSolver.java"
 Run with
-java SudokuSolver
+"java SudokuSolver"
